--- a/basic/index.html
+++ b/basic/index.html
@@ -4,7 +4,7 @@
     <script src="../build.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene antialias='true'>
       <a-assets></a-assets>
 
       <!-- Vive controllers -->
